--- a/index.html
+++ b/index.html
@@ -127,13 +127,12 @@
                     <a href="#" data-section="investments-subtopic" data-anchor="additional-intro">4. Additional Investments</a>
                 </div>
 
-                <button class="sidebar-btn" data-category="accounts-assistant">Accounts Assistant</button>
+                <button class="sidebar-btn" data-category="accounts-assistant">Assistant Accountant</button>
                 <div class="sidebar-dropdown" id="accounts-assistant-dropdown">
                     <a href="#" data-section="accounts-assistant-subtopic" data-anchor="accounts-assistant-intro">Introduction</a>
-                    <a href="#" data-section="accounts-assistant-subtopic" data-anchor="daybooks">1. Daybooks</a>
-                    <a href="#" data-section="accounts-assistant-subtopic" data-anchor="ledgers">2. Ledgers</a>
-                    <a href="#" data-section="accounts-assistant-subtopic" data-anchor="bank-recs">3. Bank Recs</a>
-                    <a href="#" data-section="accounts-assistant-subtopic" data-anchor="vat-return">4. VAT Return</a>
+                    <a href="#" data-section="accounts-assistant-subtopic" data-anchor="ledgers">1. Ledgers</a>
+                    <a href="#" data-section="accounts-assistant-subtopic" data-anchor="bank-recs">2. Bank Recs</a>
+                    <a href="#" data-section="accounts-assistant-subtopic" data-anchor="vat-return">3. VAT Return</a>
                 </div>
 
                 <button class="sidebar-btn" data-category="resources">Resources</button>
@@ -321,7 +320,7 @@
                 <div class="content-box">
                     <h1 id="management-intro">Management Accounting</h1>
                     <br>
-                    <p>This is the content for the Management sub-topic.</p>
+                    <p>Management accounting is a branch of accounting focused on providing financial and non-financial information to managers within an organisation to help them make informed business decisions. Thiis helps businesses improve efficiency through better cost control, support strategic decisions like lanuching a new product, or entering a new market, to anticipate problems and manage them, as well as track performaces of staff, goals etc.</p>
                 </div>
                 <div class="content-box">
                     <h1 id="overhead-intro">1. Overhead Allocation</h1>
@@ -346,6 +345,55 @@
                 </div>
                 <div class="content-box">
                     <h1 id="working-capital-intro">2. Working Capital Management</h1>
+                    <br>
+                    <p>Working capital management is the process of managing the available cash a business has. It considers being able to cover day-to-day operations and achieve long-term goals, while also being able to meet it’s short-term liabilities. It has it’s own ratio for analysis: Current Assets – Current Liabilities, where we want no more or less than 2:1 (i.e., for every £2 of current assets, we won’t no more than £1 of current liabilities).</p>
+                    <br>
+                    <hr>
+                    <br>
+                    <h2>Working Capital Cycle</h2>
+                    <br>
+                    <p>There is something known as the working capital cycle, this is:</p>
+                    <br>
+                    <p>Cash > Creditors > Raw Material > Work In Progress > Finished Goods > Debtors > Cash (Repeat)</p>
+                    <br>
+                    <p>Meaning: we take the cash we have, we purchase raw material from a supplier, we then introduce the raw material to production (work in progress), then we have the finished product, and then we sell it to a customer, then we have cash again to repeat the cycle.</p>
+                    <br>
+                    <p>One of the key objectives of working capital management is to minimise the time between the initial input of material and other aspects of the operating process, and the payment from customers. I.e., minimise the time between cash > cash.</p>
+                    <br>
+                    <p>There are two things we want to consider in working capital; over-trading (i.e., production), and over-investment (other current assets).</p>
+                    <br>
+                    <p><u><b>Over-Trading</b></u></p>
+                    <br>
+                    <p>Over-trading is where a business will try and do too much, too quickly without ensuring adequate long-term funds are available. If turnover (what you earn from trade (production)) increases rapidly, there will be a corresponding increase in the requirement for current liabilities, for example, trade payables, and even bank overdrafts.</p>
+                    <br>
+                    <p><b><u>Over-Investment</u></b></p>
+                    <br>
+                    <p>Over-investment is where a business will under utilise it’s available working capital. For example, having unnecessary levels of stock, paying trade payables back too early, receiving trade receivables too late, and cash and equivalents not being used.</p>
+                    <br>
+                    <hr>
+                    <br>
+                    <h2>Monitoring the Level of Working Capital</h2>
+                    <br>
+                    <p>One technique commonly used by management to help monitor the overall level of working capital is ratio analysis. Two commonly used ratios for general monitoring of the working capital requirement are:</p>
+                    <br>
+                    <p>Working Capital / Total Assets and Working Capital / Fixed Assets.</p>
+                    <br>
+                    <p>Desirables for the business is established for these ratios and compared with the actual position pertaining in the company at any one time. Variations can then be determined, the causes investigated and appropriate action taken, if necessary.</p>
+                    <br>
+                    <p>It is important to note that the desirables will be very different for different industries. For example, capital intense industries such as steel and chemicals will require a significantly higher proportion of fixed assets than wholesale operations. It is vital that ratios are considered in their correct context.</p>
+                    <br>
+                    <p>There are some key ratios that show the efficiency of each key part of a business:</p>
+                    <br>
+                    <p>Debtors/Sales: for every £1 of sales, £x is still needed collection on from customers.</p>
+                    <p>Stock/Sales: for every £1 of sales, £x inventory is being held.</p>
+                    <p>Creditors/Sales: for every £1 of sales, £x is how much is owed to suppliers.</p>
+                    <p>Net Working Capital/Sales: for every £1 of sales, £x is how much total working capital that is needed.</p>
+                    <br>
+                    <p>These ratios are like warning signs for businesses, when they move away from the normal desirables for the business, it means that something has changed, and it needs investigated.</p>
+                    <br>
+                    <p>We defined the working capital cycle as the length of time between a business paying for material entering stock, to receiving the cash inflows from sales. This must be monitored to ensure that it is under control.</p>
+                    <br>
+                    <p>The calculation of the working capital cycle is achieved in two stages:</p>
                     <br>
                     <p></p>
                 </div>
@@ -1535,7 +1583,7 @@
             
             <div class="content-section" id="accounts-assistant-subtopic">
                 <div class="content-box">
-                    <h1 id="accounts-assistant-intro">Accounts Assistant</h1>
+                    <h1 id="accounts-assistant-intro">Assistant Accountant</h1>
                     <br>
                     <h2>Introduction</h2>
                     <br>
@@ -1578,22 +1626,81 @@
                     </ul>
                 </div>
                 <div class="content-box">
-                    <h1 id="daybooks">1. Daybooks</h1>
+                    <h1 id="ledgers">1.Nominal Ledgers</h1>
+                    <br>
+                    <p>Nominal Ledgers house all the accounts in a business, and they should include the following key areas:</p>
+                    <br>
+                    <ul>
+                        <li>Sales/Purchases.</li>
+                        <li>Direct Expenses/Overheads.</li>
+                        <li>Non-Current(Fixed) Assets/Current Assets.</li>
+                        <li>Non-Current Liabilities/Current Liabilities.</li>
+                        <li>Capital and Reserves.</li>
+                    </ul>
+                    <br>
+                    <p>Now, depending on the company, and it's operations/industry, they will appear different and only include those relevant to them, although the same principle applies above. The only difference, is what is within each of those mentioned above.</p>
+                    <br>
+                    <p>below, we're going to go through a few scenarios to cover the bases of what would be expected of us depending on the transaction types.</p>
+                    <br>
+                    <hr>
+                    <br>
+                    <h1>Sales Process</h1>
+                    <br>
+                    <p>The sales process is key as an internal control, but also to ensure that the process is efficient and allows for adequate service.</p>
+                    <br>
+                    <ul>
+                        <li>Sales Requisition/Order Raise.</li>
+                        <li>Goods Sent for Delivery.</li>
+                        <li>Delievery Note/Dispatch.</li>
+                        <li>Sales Invoice.</li>
+                        <li>Payment Received.</li>
+                    </ul>
+                    <br>
+                    <p><b>Sales Requisition (Sales Order):</b> </p>
+                    <br>
+                    <p><b>Goods Sent for Delivery:</b> </p>
+                    <br>
+                    <p><b>Delivery Note/Dispatch:</b> </p>
+                    <br>
+                    <p><b>Sales Invoice:</b> </p>
+                    <br>
+                    <p><b>Payment Received:</b> </p>
+                    <br>
+                    <hr>
+                    <br>
+                    <h1>Purchases Process</h1>
+                    <br>
+                    <p>The purchase process is key as an internal control, but also to ensure that the process is efficient and allows for adequate service.</p>
+                    <br>
+                    <ul>
+                        <li>Purchase Requisition/Order Raise.</li>
+                        <li>Goods Received.</li>
+                        <li>Supplier Invoice Received.</li>
+                        <li>Invoice Processed and Approved.</li>
+                        <li>Payment Made.</li>
+                    </ul>
+                    <br>
+                    <p><b>Purchase Requisition (Purchase Order):</b> When material is needed, the purchasing department or warehouse department will raise a purchase requisition with the supplier, asking for the delivery of the necessary materials, negotiating if need be, and coming to an agreement – this is the quotation – where credit terms etc are stated (if they are a new supplier, or it’s a complex order that requires a more direct approach). Once this is done, the purchase requisition would be documented, and passed up to the finance department. This can be recorded in Sage via the supplier account;</p>
+                    <br>
+                    <p>Supplier > Edit > Orders > "New Order".</p>
+                    <br>
+                    <p>Within this, we can enter the early settlement discount data. This would need to be approved by a Senior Accountant as this may not be in the businesses interest to accept due to potential liquidity issues they have.</p>
+                    <br>
+                    <p><b>Goods Received Note (GRN):</b> When the material comes in from the supplier, the warehouse department would ensure that they are correct, including material items, quantity, damages etc. This is done by cross referencing the requisition note. Should all be good, the delivery will be accepted and a goods received note created, and then passed along to the finance department, where it would be cross referenced again.</p>
+                    <br>
+                    <p>However, should there be any missing items, incorrect materials, damages etc, then a request for a credit note would be issued with the supplier, in which the damaged materials etc would be returned to them and not added to the goods received note. The amount we pay depends on business preference, we can record the credit note once it arrives – reducing the amount payable by the credit amount, or pay the full amount and use the credit note amount when it comes time to place another order.</p>
+                    <br>
+                    <p><b>Supplier Invoice:</b> Once we receive the supplier invoice, we cross reference with the requisition note, and goods received note. We ensure there is a match between them all, and then wait for payment date.</p>
+                    <br>
+                    <p><b>Payment:</b> Now that we have cross referenced the three documents, it comes time to pay. Now, depending on the acceptance of settlement or not, we would pay earlier than needed and accept the early settlement discount, or pay on the agreed date.</p>
+                </div>
+                <div class="content-box">
+                    <h1 id="bank-recs">2. Bank Reconciliations</h1>
                     <br>
                     <p></p>
                 </div>
                 <div class="content-box">
-                    <h1 id="ledgers">2. Ledgers</h1>
-                    <br>
-                    <p></p>
-                </div>
-                <div class="content-box">
-                    <h1 id="bank-recs">3. Bank Reconciliations</h1>
-                    <br>
-                    <p></p>
-                </div>
-                <div class="content-box">
-                    <h1 id="vat-return">4. VAT Return</h1>
+                    <h1 id="vat-return">3. VAT Return</h1>
                     <br>
                     <p></p>
                 </div>
